--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="page">
     <div class="root">
       <header class="header">
-        <img src="./images/logo.svg" alt="mesto logo" class="header__logo">
+        <img src="./images/logo.svg" alt="Место логотип" class="header__logo">
       </header>
       <div class="profile">
         <div class="user-info">
@@ -76,7 +76,7 @@
 
       <div class="popup_edit-profile popup_edit-profile_state_disabled">
         <div class="popup_edit-profile__content">
-          <img src="./images/close.svg" alt="close tab" class="popup_edit-profile__close">
+          <img src="./images/close.svg" alt="кнопка закрытия окна редактирования" class="popup_edit-profile__close">
           <h3 class="popup_edit-profile__title">Редактировать профиль</h3>
           <form class="popup_edit-profile__form" name="formProfile" >
             <input type="text" name="nameX" class="popup_edit-profile__input popup__input_type_name" placeholder="Имя"
