Первая сдача на проверку

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
         </div>
       </div>
 
-      <div class="popup_edit-profile popup_edit-profile_state_disabled">
-        <div class="popup_edit-profile__content">
-          <img src="./images/close.svg" alt="кнопка закрытия окна редактирования" class="popup_edit-profile__close">
-          <h3 class="popup_edit-profile__title">Редактировать профиль</h3>
-          <form class="popup_edit-profile__form" name="formProfile" >
-            <input type="text" name="nameX" class="popup_edit-profile__input popup__input_type_name" placeholder="Имя"
+      <div class="popup-edit-profile popup-edit-profile_state_disabled">
+        <div class="popup-edit-profile__content">
+          <img src="./images/close.svg" alt="кнопка закрытия окна редактирования" class="popup-edit-profile__close">
+          <h3 class="popup-edit-profile__title">Редактировать профиль</h3>
+          <form class="popup-edit-profile__form" name="formProfile" >
+            <input type="text" name="nameX" class="popup-edit-profile__input popup__input_type_name" placeholder="Имя"
                    autocomplete="off" minlength="3" maxlength="25" required>
-            <input type="text" name="info" class="popup_edit-profile__input popup__input_type_info" placeholder="О себе"
+            <input type="text" name="info" class="popup-edit-profile__input popup__input_type_info" placeholder="О себе"
                    autocomplete="off" minlength="4" maxlength="40" required>
-            <button type="submit" name="submit" class="button popup_edit-profile__button ">Сохранить</button>
+            <button type="submit" name="submit" class="button popup-edit-profile__button ">Сохранить</button>
           </form>
         </div>
       </div>
