Первая сдача на проверку

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
           <img src="./images/close.svg" alt="кнопка закрытия окна редактирования" class="popup-edit-profile__close">
           <h3 class="popup-edit-profile__title">Редактировать профиль</h3>
           <form class="popup-edit-profile__form" name="formProfile" >
-            <input type="text" name="nameX" class="popup-edit-profile__input popup__input_type_name" placeholder="Имя"
+            <input type="text" name="nameX" class="popup-edit-profile__input popup-edit-profile__input_type_name" placeholder="Имя"
                    autocomplete="off" minlength="3" maxlength="25" required>
-            <input type="text" name="info" class="popup-edit-profile__input popup__input_type_info" placeholder="О себе"
+            <input type="text" name="info" class="popup-edit-profile__input popup-edit-profile__input_type_info" placeholder="О себе"
                    autocomplete="off" minlength="4" maxlength="40" required>
             <button type="submit" name="submit" class="button popup-edit-profile__button ">Сохранить</button>
           </form>
