--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="user-info">
             <div class="user-info__photo"></div>
             <div class="user-info__data">
-              <h1 class="user-info__name">Dmitry Stukateev</h1>
+              <h1 class="user-info__name">Жак-Ив Кусто</h1>
               <button type="button" class="button user-info__edit" ></button>
               <p class="user-info__job">WEB-developer</p>
 
@@ -73,9 +73,9 @@
           </div>
         </section>
 
-        <div class="popup-edit-profile popup-edit-profile_state_disabled">
+        <div class="popup-edit-profile popup-edit-profile_disabled">
           <div class="popup-edit-profile__content">
-            <button type="button" class="popup-edit-profile__close"></button>
+            <button type="button" class=" button popup-edit-profile__close"></button>
             <h2 class="popup-edit-profile__title">Редактировать профиль</h2>
             <form class="popup-edit-profile__form" name="formProfile" >
               <input type="text" name="nameX" class="popup-edit-profile__input popup-edit-profile__input_type_name" placeholder="Имя"
