--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p class="footer__copyright">© 2022 Mesto Russia</p>
       </footer>
     </div>
-  <script src="./script.js"></script>
+  <script src="scripts/script.js"></script>
 
   </body>
 
