--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <button type="button" class=" button popup__close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form" name="formProfile" >
-              <input type="text" name="nameX" class="popup__input popup-edit-profile__input_type_name" placeholder="Имя"
+              <input type="text" name="nameX" class="popup__input popup__input_type_name" placeholder="Имя"
                      autocomplete="off" minlength="3" maxlength="25" required>
-              <input type="text" name="info" class="popup__input popup-edit-profile__input_type_info" placeholder="О себе"
+              <input type="text" name="info" class="popup__input popup__input_type_info" placeholder="О себе"
                      autocomplete="off" minlength="4" maxlength="40" required>
               <button type="submit" name="submit" class="button popup__button ">Сохранить</button>
             </form>
@@ -58,9 +58,9 @@
           </div>
         </div>
 
-        <div class="popup-image popup_disabled">
+        <div class="popup-image popup-image_disabled">
           <div class="popup-image__content">
-            <button type="button" class=" button popup__close"></button>
+            <button type="button" class=" button popup-image__close"></button>
             <img  class="popup-image__img">
             <h2  class="popup-image__name"></h2>
           </div>
