Спринт 5. Первая сдача на проверку

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
         <p class="footer__copyright">© 2022 Mesto Russia</p>
       </footer>
     </div>
+    <template id="place-card-template">
+      <div class="place-card">
+        <div class="place-card__image">
+          <button class="button place-card__delete-icon"></button>
+        </div>
+        <div class="place-card__description">
+          <h2 class="place-card__name"></h2>
+          <button class="place-card__like-icon"></button>
+        </div>
+      </div>
+    </template>
+
     <script src="scripts/script_card-list.js"></script>
     <script src="scripts/script_user-info.js"></script>
     <script src="scripts/script_click_card-list.js"></script>
