--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           </div>
         </div>
 
-        <div class="popup-image popup-image_disabled">
+        <div class="popup popup-image popup_disabled">
           <div class="popup-image__content">
-            <button type="button" class=" button popup-image__close"></button>
+            <button type="button" class=" button popup__close"></button>
             <img  class="popup-image__img">
             <h2  class="popup-image__name"></h2>
           </div>
