--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="popup__content">
             <button type="button" class=" button popup__close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form" name="formProfile" >
+            <form class="popup__form" name="profile-form" >
               <input id="name-input" type="text" name="nameX" class="popup__input popup__input_type_name" placeholder="Имя"
                      autocomplete="off" minlength="2" maxlength="40" required>
               <span class="name-input-error popup__input-error"></span>
@@ -50,7 +50,7 @@
           <div class="popup__content">
             <button type="button" class=" button popup__close"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form class="popup__form" name="new">
+            <form class="popup__form" name="add-card-form">
               <input id="title-input" type="text" name="name" class="popup__input popup__input_type_name "
                      placeholder="Название" autocomplete="off" minlength="2" maxlength="30" required>
               <span class="title-input-error popup__input-error"></span>
@@ -88,7 +88,7 @@
     </template>
 
     <script src="scripts/script_card-list.js"></script>
-    <script src="scripts/script_user-info.js"></script>
+    <script src="scripts/index.js"></script>
     <script src="scripts/script_click_card-list.js"></script>
     <script src="scripts/validate.js"></script>
   </body>
