Спринт 7. Первая сдача на проверку

--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
 
       </main>
       <footer class="footer">
-        <p class="footer__copyright">© 2022 Mesto Russia</p>
+        <p class="footer__copyright">© 2023 Mesto Russia</p>
       </footer>
     </div>
     <template id="place-card-template">
       <div class="place-card">
         <div class="place-card__image">
-          <button class="button place-card__delete-icon"></button>
+
         </div>
+        <button class="button place-card__delete-icon"></button>
         <div class="place-card__description">
           <h2 class="place-card__name"></h2>
           <button class="place-card__like-icon"></button>
@@ -87,8 +88,11 @@
       </div>
     </template>
 
-    <script src="scripts/index.js"></script>
-    <script src="scripts/validate.js"></script>
+
+    <script type="module" src="scripts/index.js"></script>
+
+    <script type="module" src="scripts/FormValidator.js"></script>
+    <script type="module" src="scripts/Card.js"></script>
   </body>
 
 </html>
