--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link href="./pages/index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body class="page">
     <div class="root">
       <header class="header">
-        <img src="./images/logo.svg" alt="Место логотип" class="header__logo">
+        <img src="<%=require('./images/logo.svg')%>" alt="Место логотип" class="header__logo">
       </header>
       <main class="main">
         <section class="profile">
@@ -87,11 +86,6 @@
         </div>
       </div>
     </template>
-
-
-    <script type="module" src="scripts/index.js"></script>
-    <script type="module" src="scripts/FormValidator.js"></script>
-    <script type="module" src="scripts/Card.js"></script>
   </body>
 
 </html>
